[package]
name = "gr-cli"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.2.4", features = ["cargo"] }
gr-infra = { path = "../gr-infra" }
gr-local-dev = { path = "../gr-local-dev" }
tokio = { version = "1", features = ["full"] }
