[package]
name = "gr-infra"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aws-config = "0.56.1"
aws-sdk-cloudformation = "0.33.0"
aws-sdk-ec2 = "0.33.0"
strum = "0.25.0"
strum_macros = "0.25.2"
tokio = { version = "1", features = ["full"] }
